--- a/src/app/login/sign-in/sign-in.component.html
+++ b/src/app/login/sign-in/sign-in.component.html
@@ -1,1 +1,6 @@
-<p>sign-in works!</p>
+<app-navbar></app-navbar>
+
+<div style="text-align: center;">
+  <h1>Welcome</h1>
+  <h2> Please login: </h2>
+</div>
