--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,18 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container{
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 5px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  }
