Commit puesta a punto

--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,1 +1,16 @@
 
+<!--
+
+<section class="signIn"  *ngIf="(!false)">
+    <h4>SignIn</h4>
+    <form>
+      <input class="controls" type="text" id="tipo" name="tipo" [(ngModel)]="customer.mail" placeholder="Tipo">
+      <input class="controls" type="text" id="nombre" name="nombre" [(ngModel)]="customer.password" placeholder="Nombre">  <input class="controls" type="number" id="personas" name="personas"  [(ngModel)]="tripulada.personas" placeholder="Capacidad de Tripulantes">
+       <p>Ingresar</p>
+      <button class="boton" (click)="guardarTripulada(customer)" type="submit" >SignIn</button>
+      <button class="boton"  [routerLink]="['/app-home']" type="submit" >SignUp</button>
+      <p>¡Listo!</p>
+    </form>
+  </section>
+
+-->
