--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+
+<!-- <p>footer works!</p> -->
+
+<footer class="footer">
+    <div>
+      <p>Banking App by Bruno Fernandez<a href="mailto:dlqq@outlook.es">dlqq@outlook.es</a></p>
+    </div>
+</footer>
