--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -1,3 +1,34 @@
+/*
 .example-spacer {
   flex: 1 1 auto;
+}
+*/
+
+.topnav {
+  background-color: rgb(42, 41, 41);
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #c4fa00f2;
+  color: white;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active{
+  background-color: #22fd90f2; /*  #ff664a   #fffa5a  #ff664a    */
+  color: rgb(248, 250, 248);
+  font-weight: 500;
+  /*background:linear-gradient(to right, rgb(130,226,68), #6019e0);*/
 }
