--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.body{
+    background: rgb(34,40,59);
+    background: -moz-linear-gradient(90deg, rgba(34,40,59,1) 5%, rgba(20,56,65,1) 20%, rgba(163,57,204,1) 50%, rgba(24,64,79,1) 80%, rgba(14,33,41,1) 95%);
+    background: -webkit-linear-gradient(90deg, rgba(34,40,59,1) 5%, rgba(20,56,65,1) 20%, rgba(163,57,204,1) 50%, rgba(24,64,79,1) 80%, rgba(14,33,41,1) 95%);
+    background: linear-gradient(90deg, rgba(34,40,59,1) 5%, rgba(20,56,65,1) 20%, rgba(163,57,204,1) 50%, rgba(24,64,79,1) 80%, rgba(14,33,41,1) 95%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22283b",endColorstr="#0e2129",GradientType=1);
+    position: relative;
+    padding-bottom: 5em; /*ESTA PROPIEDAD ES PARA QUE EL FOOTER COLAPSE CONTRA EL BODY*/
+    min-height:100vh; /* INDICO AL BODY QUE TIENE QUE MEDIR POR LO MENOS LO QU EMIDE EL VIEWPORT*/
+  }
 
+/*
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*/
