--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,1 +1,21 @@
-<p>ejercicio works!</p>
+
+<br>
+<label>showCustomerData</label>
+<div> Customer: {{showCustomerData("3303054-3")}}</div>
+
+<br>
+<label>showIdAndFullnameAllCustomers</label>
+<div> Customers: {{showIdAndFullnameAllCustomers()}} </div>
+
+
+<br>
+<label>showIdAndFullnameAllCustomers</label>
+<div> Elemento: {{showCurrentElement()}} </div>
+
+<br>
+<label>Sum( a + b )</label>
+<div> Resultados: {{sum(1,2)}} </div>
+
+<br>
+<label>getCustomersFullNameAndId + sortCustomers</label>
+<div> Customers: {{getCustomersFullNameAndId(customers, sortCustomers)}} </div>
