--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,1 +1,20 @@
-<p>ejercicio works!</p>
+<h2 class="text-xl-center"></h2>
+<h2 class="text-xl-center">With Observer</h2>
+
+<h3 class="text-xl-center" *ngIf="textTransform()">{{(textTransform() )}}</h3>
+
+<h3 class="text-xl-center" *ngIf="changePhone()">{{(changePhone() )}}</h3>
+
+<h3 class="text-xl-center" *ngIf="someCustomer()">{{(someCustomer())}}</h3>
+
+<h2 class="text-xl-center my-5 text-4xl">Without Observer</h2>
+
+<h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
+
+<h3 class="text-xl-center" *ngIf="setState()">{{(setState())}}</h3>
+
+<h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
+
+<h2 class="text-xl-center my-5 text-4xl">Function composition</h2>
+
+<h3 class="text-xl-center" *ngIf="getInfo(showInfo)">{{getInfo(showInfo)}}</h3>
