--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -20,9 +20,10 @@
 <div class="topnav">
   <a  class="active" href="#"[routerLink]="['/app-home']">Home</a>
   <a  href="#"[routerLink]="['/app-vista-lanzadera']">Mis datos</a>
-  <a  href="#"  [routerLink]="['/']">Cuentas</a>
+  <a  href="#"  [routerLink]="['/']"></a>
   <a  href="#"  [routerLink]="['/']">Depositos</a>
   <a href="#"  [routerLink]="['/']">Transferencias</a>
   <a href="#"  [routerLink]="['/']">Buscar</a>
+  <a href="#"  [routerLink]="['/app-ejercicio']">Ejercicio Funcional</a>
 </div>
 
