--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -5,11 +5,11 @@
 
 <br>
 <label>showIdAndFullnameAllCustomers</label>
-<div> Customers: {{showIdAndFullnameAllCustomers()}} </div>
+<div> Customers: {{showIdAndFullnameAllCustomers(customers)}} </div>
 
 
 <br>
-<label>showIdAndFullnameAllCustomers</label>
+<label>showCurrentElement</label>
 <div> Elemento: {{showCurrentElement()}} </div>
 
 <br>
@@ -19,3 +19,7 @@
 <br>
 <label>getCustomersFullNameAndId + sortCustomers</label>
 <div> Customers: {{getCustomersFullNameAndId(customers, sortCustomers)}} </div>
+
+<br>
+<label>showMailUsers</label>
+<div> Customers: {{showMailProviderUsers("mail.com")}} </div>
