--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,13 +1,14 @@
-<h2 class="text-xl-center"></h2>
-<h2 class="text-xl-center">With Observer</h2>
+<br>
+<h2 class="text-xl-center">Transformaciones de datos con observables:</h2>
+<br>
 
-<h3 class="text-xl-center" *ngIf="textTransform()">{{(textTransform() )}}</h3>
+<h3 class="text-xl-center" *ngIf="Transform()">{{(Transform() )}}</h3>
 
-<h3 class="text-xl-center" *ngIf="changePhone()">{{(changePhone() )}}</h3>
+<h3 class="text-xl-center" *ngIf="Phone()">{{(Phone() )}}</h3>
 
 <h3 class="text-xl-center" *ngIf="someCustomer()">{{(someCustomer())}}</h3>
 
-<h2 class="text-xl-center my-5 text-4xl">Without Observer</h2>
+<h2 class="text-xl-center my-5 text-4xl">Transformaciones de datos sin observable:</h2>
 
 <h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
 
@@ -15,6 +16,6 @@
 
 <h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
 
-<h2 class="text-xl-center my-5 text-4xl">Function composition</h2>
+<h2 class="text-xl-center my-5 text-4xl">Composicion de funciones:</h2>
 
-<h3 class="text-xl-center" *ngIf="getInfo(showInfo)">{{getInfo(showInfo)}}</h3>
+<h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3>
