--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -27,7 +27,7 @@
 
 /* Add a color to the active/current link */
 .topnav a.active{
-  background-color: #13fc78fa; /*  #ff664a   #fffa5a  #ff664a    */
+  background-color: #98eb2bf2;; /*  #ff664a   #fffa5a  #ff664a    */
   color: rgb(248, 250, 248);
   font-weight: 500;
   /*background:linear-gradient(to right, rgb(130,226,68), #6019e0);*/
