mostrar en html ver por estado

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,3 +1,6 @@
-<h1> Soy yo  </h1>
+<h1> Funciones </h1>
 <pre> {{ customerPhone | json }} </pre>
 <button (click)="mapCustomersToPhone(10)"> Click </button>
+
+<pre> {{ activeCustomer | json }} </pre>
+<button (click)="filterActiveCustomers(true)"> Filtrar por activo </button> 
