--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -23,3 +23,7 @@
 <br>
 <label>showMailUsers</label>
 <div> Customers: {{showMailProviderUsers("mail.com")}} </div>
+
+<br>
+<label>showCustomerData</label>
+<div> Customer: {{allDataToUpper(showCustomerData("123232-3"))}}</div>
