--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,1 +1,56 @@
+<div class="container">
+  <div class="d-flex justify-content-start">
+    <button class="btn btn-primary m-3" (click)="nombreMayusculas(baseCustomerss, transformarNombre)">Obtener nombres en mayúsculas</button>
+  </div>
 
+  <div class="d-flex flex-wrap">
+    <div class="card m-3" *ngFor="let customer of clientesConNombresEnMayusculas">
+      <div class="card-body">
+        {{ customer | json }}
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-start">
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="sumaDeTelefonos(documentType.value)">Suma de numeros de telefonos por documento</button>
+      <input type="text" #documentType>
+
+    </div>
+  </div>
+
+  <div class="d-flex flex-wrap">
+    <div class="card-body">
+      <h2> La suma de todos los numeros es: {{ sumadTelefonos | json }}</h2>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-start">
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="filtradoPorDocumento(documentType2.value)">Filtrar clientes por su documento</button>
+      <input type="text" #documentType2>
+
+    </div>
+  </div>
+
+  <div class="d-flex flex-wrap">
+    <div class="card col-sm-3" *ngFor="let cliente of filtradoxDocumento">
+      <div class="card-body">
+        {{ cliente | json }}
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-start">
+    <button class="btn btn-secondary m-3" (click)="filtradoPorEstado(true)">Filtrar por estado "true"</button>
+    <button class="btn btn-secondary m-3" (click)="filtradoPorEstado(false)">Filtrar por estado "false"</button>
+  </div>
+
+  <div class="d-flex flex-wrap">
+    <div class="card col-sm-3" *ngFor="let cliente of filtradoXEstado">
+      <div class="card-body">
+        {{ cliente | json }}
+      </div>
+    </div>
+  </div>
+</div>
