--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,20 +1,29 @@
 <br>
 <h2 class="text-xl-center">Transformaciones de datos con observables:</h2>
 <br>
-
 <h3 class="text-xl-center" *ngIf="Transform()">{{(Transform() )}}</h3>
 
 <h3 class="text-xl-center" *ngIf="Phone()">{{(Phone() )}}</h3>
 
-<h3 class="text-xl-center" *ngIf="someCustomer()">{{(someCustomer())}}</h3>
+<h3 class="text-xl-center" *ngIf="ThisCustomer()">{{(ThisCustomer())}}</h3>
+
+
+
 
 <h2 class="text-xl-center my-5 text-4xl">Transformaciones de datos sin observable:</h2>
+
+<h3 class="text-xl-center" *ngIf="ThisEmail()">{{(ThisEmail())}}</h3>
 
 <h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
 
 <h3 class="text-xl-center" *ngIf="setState()">{{(setState())}}</h3>
 
 <h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
+
+
+
+
+
 
 <h2 class="text-xl-center my-5 text-4xl">Composicion de funciones:</h2>
 
