--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<h1 class='text-3xl font-bold underline'>
-  Hello world!
-</h1>
+<main>
+  <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+    <!-- Replace with your content -->
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
+    <!-- /End replace -->
+  </div>
+</main>
