--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,16 +1,5 @@
 <br>
-<h2 class="text-xl-center">Transformaciones de datos con observables:</h2>
-<br>
-<h3 class="text-xl-center" *ngIf="Transform()">{{(Transform() )}}</h3>
-
-<h3 class="text-xl-center" *ngIf="Phone()">{{(Phone() )}}</h3>
-
-<h3 class="text-xl-center" *ngIf="ThisCustomer()">{{(ThisCustomer())}}</h3>
-
-
-
-
-<h2 class="text-xl-center my-5 text-4xl">Transformaciones de datos sin observable:</h2>
+<h2 class="text-xl-center my-5 text-4xl">Transformaciones de datos SIN observable:</h2>
 
 <h3 class="text-xl-center" *ngIf="ThisEmail()">{{(ThisEmail())}}</h3>
 
@@ -20,8 +9,14 @@
 
 <h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
 
+<br>
+<h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
+<br>
+<h3 class="text-xl-center" *ngIf="Transform()">{{(Transform() )}}</h3>
 
+<h3 class="text-xl-center" *ngIf="Phone()">{{(Phone() )}}</h3>
 
+<h3 class="text-xl-center" *ngIf="ThisCustomer()">{{(ThisCustomer())}}</h3>
 
 
 
