no me dio el tiempo

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,6 +1,6 @@
 <h1> Funciones </h1>
 <pre> {{ customerPhone | json }} </pre>
-<button (click)="mapCustomersToPhone(10)"> Click </button>
+<button (click)="mapCustomersToPhone(10)"> Filtrar por numero de telefono </button>
 
 <pre> {{ activeCustomer | json }} </pre>
 <button (click)="filterActiveCustomers(true)"> Filtrar por activo </button> 
