--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,25 +1,15 @@
+
 <br>
-<h2 class="text-xl-center my-5 text-4xl">Transformaciones de datos SIN observable:</h2>
-
-<h3 class="text-xl-center" *ngIf="ThisEmail()">{{(ThisEmail())}}</h3>
-
+<h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2><br>
+<h3 class="text-xl-center" *ngIf="ThisEmail()">{{(ThisEmail() )}}</h3>
 <h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
+<h3 class="text-xl-center" *ngIf="State()">{{(State())}}</h3>
+<h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3><br>
 
-<h3 class="text-xl-center" *ngIf="setState()">{{(setState())}}</h3>
-
-<h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
-
-<br>
-<h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
-<br>
-<h3 class="text-xl-center" *ngIf="Transform()">{{(Transform() )}}</h3>
-
-<h3 class="text-xl-center" *ngIf="Phone()">{{(Phone() )}}</h3>
-
+<h2 class="text-xl-center">Transformaciones de datos CON observables:</h2><br>
+<h3 class="text-xl-center" *ngIf="Mayus()">{{(Mayus() )}}</h3>
+<h3 class="text-xl-center" *ngIf="Pass()">{{(Pass() )}}</h3>
 <h3 class="text-xl-center" *ngIf="ThisCustomer()">{{(ThisCustomer())}}</h3>
 
-
-
-<h2 class="text-xl-center my-5 text-4xl">Composicion de funciones:</h2>
-
+<h2 class="text-xl-center">Composicion de funciones:</h2><br>
 <h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3>
