Commit After Class

--- a/src/app/shared/home/home.component.scss
+++ b/src/app/shared/home/home.component.scss
@@ -39,7 +39,7 @@
   }
   
   .btn-home1:hover{
-    background-color: #a5fe30f2;
+    background-color: #7cb136f5;;
     color: rgb(248, 250, 248);
   
   }
