--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,11 +1,10 @@
 <br>
 <br>
-<br>
 
 <h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2>
 <br>
 <br>
-<h3 class="text-xl-center" *ngIf="ThisEmail()">{{(ThisEmail())}}</h3>
+<h3 class="text-xl-center" *ngIf="Email()">{{(Email())}}</h3>
 <h3 class="text-xl-center" *ngIf="cedula()">{{(cedula())}}</h3>
 <br>
 
@@ -13,11 +12,12 @@
 <h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
 <br>
 <br>
-<h3 class="text-xl-center" *ngIf="Mayus()">{{(Mayus() )}}</h3>
-<h3 class="text-xl-center" *ngIf="Pass()">{{(Pass() )}}</h3>
+<h3 class="text-xl-center" *ngIf="Mayus()">{{(Mayus() | async )}}</h3>
+<h3 class="text-xl-center" *ngIf="Pass()">{{(Pass() | async  )}}</h3>
 <br>
 
 <h2 class="text-xl-center">Composicion de funciones:</h2>
 <br>
-<br>
 <h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3>
+<br>
+<br>
