--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,1 +1,7 @@
 
+<br>
+<br>
+<h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2>
+<br>
+<h3 class="text-xl-center">{{(searchCustomrByEmail())}}</h3>
+<br>
