--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -4,4 +4,5 @@
 <h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2>
 <br>
 <h3 class="text-xl-center">{{(searchCustomrByEmail())}}</h3>
+<h3 class="text-xl-center">{{(filterCustomerByDocType())}}</h3>
 <br>
