--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -5,4 +5,5 @@
 <br>
 <h3 class="text-xl-center">{{(searchCustomrByEmail())}}</h3>
 <h3 class="text-xl-center">{{(filterCustomerByDocType())}}</h3>
+<h3 class="text-xl-center">{{(filterCustomerByPhone())}}</h3>
 <br>
