--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -7,3 +7,7 @@
 <h3 class="text-xl-center">{{(filterCustomerByDocType())}}</h3>
 <h3 class="text-xl-center">{{(filterCustomerByPhone())}}</h3>
 <br>
+<h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
+<br>
+<h3 class="text-xl-center">{{(searchCustomerByFullName())}}</h3>
+<br>
