--- a/src/app/program-Funcional/ejercicio/ejercicio.component.html
+++ b/src/app/program-Funcional/ejercicio/ejercicio.component.html
@@ -15,3 +15,30 @@
     <h2>Funcion CallBack</h2>
     
 </div>
+
+<div>
+    <h2 h2 class="text-xl-center" *ngIf="getCustomerState()">{{(getCustomerState() | json)}}</h2>
+    
+</div>
+
+<!--
+    <p class="text-xl-center mb-5 text-4xl">With Observer</p>
+
+<h2 class="text-xl-center" *ngIf="textTransform()">{{(textTransform() | async)}}</h2>
+
+<h2 class="text-xl-center" *ngIf="changePhone()">{{(changePhone() | async)}}</h2>
+
+<h2 class="text-xl-center" *ngIf="someCustomer()">{{(someCustomer() | async)}}</h2>
+
+<p class="text-xl-center my-5 text-4xl">Without Observer</p>
+
+<h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
+
+<h3 class="text-xl-center" *ngIf="setState()">{{(setState())}}</h3>
+
+<h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
+
+<p class="text-xl-center my-5 text-4xl">Function composition</p>
+
+<h3 class="text-xl-center" *ngIf="getInfo(showInfo)">{{getInfo(showInfo)}}</h3>
+-->
