getCustomerName en html

--- a/src/app/program-Funcional/ejercicio/ejercicio.component.html
+++ b/src/app/program-Funcional/ejercicio/ejercicio.component.html
@@ -17,28 +17,14 @@
 </div>
 
 <div>
-    <h2 h2 class="text-xl-center" *ngIf="getCustomerState()">{{(getCustomerState() | json)}}</h2>
+    <h2 h2 class="text-xl-center" *ngIf="addPhoneCustomer()">
+        {{getCustomerState() | async}}</h2>
     
 </div>
 
-<!--
-    <p class="text-xl-center mb-5 text-4xl">With Observer</p>
+<div>
+    <h2 h2 class="text-xl-center" *ngIf="getCustomerName(c)">
+        {{getCustomerName(c) | async}}</h2>
+    
+</div>
 
-<h2 class="text-xl-center" *ngIf="textTransform()">{{(textTransform() | async)}}</h2>
-
-<h2 class="text-xl-center" *ngIf="changePhone()">{{(changePhone() | async)}}</h2>
-
-<h2 class="text-xl-center" *ngIf="someCustomer()">{{(someCustomer() | async)}}</h2>
-
-<p class="text-xl-center my-5 text-4xl">Without Observer</p>
-
-<h3 class="text-xl-center" *ngIf="cedulaFilter()">{{(cedulaFilter())}}</h3>
-
-<h3 class="text-xl-center" *ngIf="setState()">{{(setState())}}</h3>
-
-<h3 class="text-xl-center" *ngIf="allTrue()">{{allTrue()}}</h3>
-
-<p class="text-xl-center my-5 text-4xl">Function composition</p>
-
-<h3 class="text-xl-center" *ngIf="getInfo(showInfo)">{{getInfo(showInfo)}}</h3>
--->
