getCustomerState en html

--- a/src/app/program-Funcional/ejercicio/ejercicio.component.html
+++ b/src/app/program-Funcional/ejercicio/ejercicio.component.html
@@ -28,3 +28,9 @@
     
 </div>
 
+<div>
+    <h2 h2 class="text-xl-center" *ngIf="getCustomerState()">
+        {{getCustomerState() | async}}</h2>
+    
+</div>
+
