--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,5 +1,3 @@
-
-<br>
 <br>
 <h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2>
 <br>
@@ -10,4 +8,5 @@
 <h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
 <br>
 <h3 class="text-xl-center">{{(searchCustomerByFullName())}}</h3>
+<h3 class="text-xl-center">{{(filterCustomerByState())}}</h3>
 <br>
