--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -9,4 +9,5 @@
 <br>
 <h3 class="text-xl-center">{{(searchCustomerByFullName())}}</h3>
 <h3 class="text-xl-center">{{(filterCustomerByState())}}</h3>
+<h3 class="text-xl-center">{{(searchCustomerByDocType())}}</h3>
 <br>
