--- a/src/app/program-Funcional/ejercicio/ejercicio.component.html
+++ b/src/app/program-Funcional/ejercicio/ejercicio.component.html
@@ -11,23 +11,23 @@
 </div>
 
 <br>
-<div>
-    <h2>Funcion CallBack</h2>
-    
-</div>
 
 
 <div>
+    <h2>Observer 1</h2>
     <h2 h2 class="text-xl-center" *ngIf="addPhoneCustomer(100)">
         {{addPhoneCustomer(100) | async}}</h2>
 </div>
 
 <div>
+    <h2>Observer 2</h2>
+
     <h2 h2 class="text-xl-center" *ngIf="getCustomerName(c)">
         {{getCustomerName(c) | async}}</h2>
 </div>
 
 <div>
+    <h2>Observer 3</h2>
     <h2 h2 class="text-xl-center" *ngIf="getCustomerState()">
         {{getCustomerState() | async}}</h2>
 </div>
