--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,33 +1,59 @@
-<br>
-<label>currentUSer</label>
-<div> Customer: {{currentUser}}</div>
+<div class="container" style="margin-left: 20px;">
+  <br>
+  <label>currentUSer</label>
+  <div class="results"> Customer: {{currentUser}}</div>
+
+  <hr>
+
+  <br>
+  <label>showCustomerData</label>
+  <br>
+  <div class="results"> Customer: {{showCustomerData("3303054-3")}}</div>
+
+  <hr>
+
+  <br>
+  <label>showIdAndFullnameAllCustomers</label>
+  <div class="results"> Customers: {{showIdAndFullnameAllCustomers(customers)}} </div>
+
+  <hr>
+
+  <br>
+  <label>showCurrentElement</label>
+  <div class="results"> Elemento: {{showCurrentElement()}} </div>
+
+  <hr>
+
+  <br>
+  <label>Sum( a + b )</label>
+  <div class="results"> Resultados: {{sum(1,2)}} </div>
+
+  <hr>
+
+  <br>
+  <label>getCustomersFullNameAndId + sortCustomers</label>
+  <div class="results"> Customers: {{getCustomersFullNameAndId(customers, sortCustomers)}} </div>
+
+  <hr>
+
+  <br>
+  <label>showMailUsers</label>
+  <div class="results"> Customers: {{findByEmailProvider("mimail.com")}} </div>
+
+  <hr>
+
+  <br>
+  <label>showCustomerData</label>
+  <div class="results"> Customer: {{allDataToUpper(showCustomerData("123232-3"))}}</div>
+
+  <hr>
+
+  <br>
+  <label>show Disabled Customers</label>
+  <div class="results"> Customer: {{findDisabledCustomers()}}</div>
 
 
-<br>
-<label>showCustomerData</label>
-<div> Customer: {{showCustomerData("3303054-3")}}</div>
+  <br>
+  <div>FIN</div>
 
-<br>
-<label>showIdAndFullnameAllCustomers</label>
-<div> Customers: {{showIdAndFullnameAllCustomers(customers)}} </div>
-
-
-<br>
-<label>showCurrentElement</label>
-<div> Elemento: {{showCurrentElement()}} </div>
-
-<br>
-<label>Sum( a + b )</label>
-<div> Resultados: {{sum(1,2)}} </div>
-
-<br>
-<label>getCustomersFullNameAndId + sortCustomers</label>
-<div> Customers: {{getCustomersFullNameAndId(customers, sortCustomers)}} </div>
-
-<br>
-<label>showMailUsers</label>
-<div> Customers: {{showMailProviderUsers("mail.com")}} </div>
-
-<br>
-<label>showCustomerData</label>
-<div> Customer: {{allDataToUpper(showCustomerData("123232-3"))}}</div>
+</div>
