agregando funcion nombresObservados a html

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -7,3 +7,6 @@
 
 <pre> {{ customerData | json }} </pre>
 <button (click)="mapCustomersByDocument('123456-3')"> Buscar por documento </button> 
+
+<pre> {{ obsName | json }} </pre>
+<button (click)="nombresObservados('Nombre 1')"> Nombres Observados </button> 
