--- a/src/app/program-Funcional/ejercicio/ejercicio.component.html
+++ b/src/app/program-Funcional/ejercicio/ejercicio.component.html
@@ -41,8 +41,8 @@
 
 <div>
     <h2 class="text-xl-center">Observable 5</h2>
-    <h4 class="text-xl-center" *ngIf="getCustomerState()">
-        {{getCustomerState() | async}}</h4>
+    <h4 class="text-xl-center" *ngIf="getIdName(id)">
+        {{getIdName(id) | async}}</h4>
 </div>
 
 <div>
