Agregar buscar por nombre completo y dejarlo en mayuscula

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -14,3 +14,6 @@
 <pre> {{filteredCustomers | json }} </pre>
 <button (click)="filterCustomersByDocumentType('a6a6s6e6e')"> Filtrar por documento </button> 
 
+<pre> {{observadoC | json }} </pre>
+<button (click)="searchCustomerByFullNameUpperCase()"> Buscar cliente 3 + mayuscula </button> 
+
