--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-
+<br>
   <div class="d-flex justify-content-start">
     <div class="m-3">
       <button class="btn btn-primary" (click)="sumaDeTelefonos(documentType.value)">Suma de numeros de telefonos por documento</button>
@@ -18,12 +18,14 @@
 
     </div>
   </div>
+  <br>
 
   <div class="d-flex flex-wrap">
     <div class="card-body">
       <h2> La suma de todos los numeros es: {{ sumadTelefonos | json }}</h2>
     </div>
   </div>
+  <br>
 
   <div class="d-flex justify-content-start">
     <div class="m-3">
@@ -32,6 +34,7 @@
 
     </div>
   </div>
+  <br>
 
   <div class="d-flex flex-wrap">
     <div class="card col-sm-3" *ngFor="let cliente of filtradoxDocumento">
@@ -40,6 +43,7 @@
       </div>
     </div>
   </div>
+  <br>
 
 
   <div class="d-flex justify-content-start">
@@ -49,6 +53,7 @@
 
     </div>
   </div>
+  <br>
 
   <div class="d-flex flex-wrap">
     <div class="card col-sm-3" *ngFor="let cliente of filtradoxemail">
@@ -57,8 +62,60 @@
       </div>
     </div>
   </div>
+  <br>
+
+  <div class="d-flex justify-content-start">
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="nombresObservados(documentType4.value)">Filtrar clientes por su Nombre</button>
+      <input type="text" #documentType4>
+    </div>
+  </div>
+  <br>
 
 
+  <div class="d-flex flex-wrap">
+    <div class="card col-sm-3" >
+      <div >
+        {{ nombresobservados | json }}
+      </div>
+    </div>
+  </div>
+  <br>
+
+  <div class="d-flex justify-content-start">
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="filtradoPorPassword(documentType5.value)">Funcion sorpresa</button>
+      <input type="password" #documentType5>
+    </div>
+  </div>
+
+
+  <div class="d-flex flex-wrap">
+    <div class="card col-sm-3" >
+      <div >
+        {{ passwordHackeada | json }}
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <div class="d-flex justify-content-start">
+    <div class="m-3">
+      <button class="btn btn-primary" (click)="cambiarEstado(documentType6.value)">Cambio de estado por documento</button>
+      <input type="text" #documentType6>
+    </div>
+  </div>
+
+
+  <div class="d-flex flex-wrap">
+    <div class="card col-sm-3" >
+      <div >
+        {{ estados | json }}
+      </div>
+    </div>
+  </div>
+
+  <br>
 
 
   <div class="d-flex justify-content-start">
