creacion de funcion de orden superior

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -9,7 +9,7 @@
 <button (click)="mapCustomersByDocument('123456-3')"> Buscar por documento </button> 
 
 <pre> {{ observadoN | json }} </pre>
-<button (click)="nombresObservados('Nombre 1')"> Nombres Observados </button> 
+<button (click)="searchByNameAndGetNameAndEmail('Nombre 1')"> Nombres Observados </button> 
 
 <pre> {{filteredCustomers | json }} </pre>
 <button (click)="filterCustomersByDocumentType('a6a6s6e6e')"> Filtrar por documento </button> 
