--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -11,3 +11,6 @@
 <h3 class="text-xl-center">{{(filterCustomerByState())}}</h3>
 <h3 class="text-xl-center">{{(searchCustomerByDocType())}}</h3>
 <br>
+<h2 class="text-xl-center">Composicion de funciones:</h2>
+<br>
+<h3 class="text-xl-center">{{(showInfo(showCustomerName))}}</h3>
