Commit Add subscribe

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,7 @@
 
 .footer {
-    background-color: #212121;
-    padding: 25px;
+    background-color: #1a1a1f;
+    padding: 50px;
     position: absolute;
     bottom: 0PX;
     width: 100%;
@@ -19,7 +19,19 @@
   .footer a {
   
     font-family: Helvetica;
-    color: #a5fe30f2;
-    margin-left: 20px;
+    margin-left: 20px; 
   }
+
+  a{
+    color: #fe6047;
+  }
+
+  a :hover {
+    color: #5eaefff2;
+  }
+
+
+  
+ 
+ 
   
