--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="cover"> <!-- COVER TRANSPARENCIA NEGRA-->
       <div class="content"> <!-- ESTE ES EL CONTENIDO DE MI HOME -->
         <h1>e-Banking</h1>
-        <p>Bienvenido a e-Banking App.<br>Tu dinero siempre en buenas manos </p>
+        <p>Bienvenido a e-Banking App<br>Tu dinero siempre en buenas manos!</p>
         <div>
           <button class="btn-home1" [routerLink]="['/app-vista-agregar-naves']" >TRANSFERENCIAS</button>
           <button class="btn-home2" >DEPOSITOS</button>
