--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -5,7 +5,7 @@
 */
 
 .topnav {
-  background-color: rgb(42, 41, 41);
+  background-color:  #212127;
   overflow: hidden;
 }
 
@@ -16,18 +16,18 @@
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #7cb136bb;
+  background-color: #4f8dcaf2 ;
   color: white;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active{
-  background-color: #98eb2bf2;; /*  #ff664a   #fffa5a  #ff664a    */
+  background-color:  #fe6047;; /*  #ff664a   #fffa5a  #ff664a    */
   color: rgb(248, 250, 248);
   font-weight: 500;
   /*background:linear-gradient(to right, rgb(130,226,68), #6019e0);*/
