--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -12,12 +12,18 @@
 <h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
 <br>
 <br>
-<h3 class="text-xl-center" *ngIf="Mayus()">{{(Mayus() | async )}}</h3>
-<h3 class="text-xl-center" *ngIf="Pass()">{{(Pass() | async  )}}</h3>
+<h3 class="text-xl-center" >{{(Mayus() )}}</h3>
+<h3 class="text-xl-center" >{{(Pass() )}}</h3>
 <br>
 
 <h2 class="text-xl-center">Composicion de funciones:</h2>
 <br>
-<h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3>
+<h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3> 
 <br>
 <br>
+
+<!--
+
+-->
+
+
