--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,8 +1,6 @@
 
-<!-- <p>footer works!</p> -->
-
 <footer class="footer">
     <div>
-      <p>Banking App by Bruno Fernandez<a href="mailto:dlqq@outlook.es">dlqq@outlook.es</a></p>
+      <p>Banking App<a href="mailto:dlqq@outlook.es">by Bruno Fernández</a></p>
     </div>
 </footer>
