--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 
-<h2 class="text-xl-center">Transformaciones de datos SIN observable:</h2>
+<h2 class="text-xl-center">-*-*-*-*-* Transformaciones de datos SIN observable *-*-*-*-*-</h2>
 <br>
 <br>
 <h3 class="text-xl-center" *ngIf="Email()">{{(Email())}}</h3>
@@ -9,14 +9,14 @@
 <br>
 
 
-<h2 class="text-xl-center">Transformaciones de datos CON observables:</h2>
+<h2 class="text-xl-center">*-*-*-*-*- Transformaciones de datos CON observables *-*-*-*-*-</h2>
 <br>
 <br>
 <h3 class="text-xl-center" >{{(Mayus() )}}</h3>
 <h3 class="text-xl-center" >{{(Pass() )}}</h3>
 <br>
 
-<h2 class="text-xl-center">Composicion de funciones:</h2>
+<h2 class="text-xl-center">*-*-*-*-*- Composicion de funciones *-*-*-*-*-</h2>
 <br>
 <h3 class="text-xl-center" *ngIf="Info(showInfo)">{{Info(showInfo)}}</h3> 
 <br>
