Commit para completar

--- a/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio/ejercicio.component.html
@@ -6,6 +6,7 @@
 <br>
 <h3 class="text-xl-center" *ngIf="Email()">{{(Email())}}</h3>
 <h3 class="text-xl-center" *ngIf="cedula()">{{(cedula())}}</h3>
+<h3 class="text-xl-center" *ngIf="Fullname()">{{(Fullname())}}</h3>
 <br>
 
 
@@ -14,6 +15,7 @@
 <br>
 <h3 class="text-xl-center" >{{(Mayus() )}}</h3>
 <h3 class="text-xl-center" >{{(Pass() )}}</h3>
+<h3 class="text-xl-center" >{{(Document() )}}</h3>
 <br>
 
 <h2 class="text-xl-center">*-*-*-*-*- Composicion de funciones *-*-*-*-*-</h2>
