--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -10,6 +10,7 @@
         {{(getActiveCustomers()|json)}}
     </pre>
 </div>
+
 <div class="container">
     <h3> Get Deactive Accounts</h3>
     <p>retorna los nombres en mayuscula de las cuentas desactivadas</p>
@@ -17,6 +18,7 @@
         {{(getDeactivatedCustomers()|json)}}
     </pre>
 </div>
+
 <!-- <div class="container">
     <h3> Phone to String</h3>
     <p>busca el telefono del ID dado y lo pasa a string</p>
@@ -24,10 +26,18 @@
         {{(phoneToString("111111111aaaa")|json)}}
     </pre>
 </div> -->
+
 <div class="container">
     <h3> Name to Uppercase</h3>
     <p>retorna los nombres en mayuscula de las cuentas desactivadas</p>
-    <pre *ngIf="nameToUpperCase()">
-        {{(nameToUpperCase()|json)}}
+    <pre>
+        {{(nameToUpperCase())}}
+    </pre>
+</div>
+<div class="container">
+    <h3> Name to Uppercase</h3>
+    <p>retorna los nombres en mayuscula de las cuentas desactivadas</p>
+    <pre>
+        {{(transformEmail()|json)}}
     </pre>
 </div>
