--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,12 +1,15 @@
 <p>
-  <mat-toolbar>
+  <mat-toolbar color="primary">
     <span>Virtual Banking APP</span>
     <span class="spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
+    <button class="navbar-button" mat-raised-button routerLink="/prog-functional">
+      <mat-icon>face</mat-icon> Functional Programming
     </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
+    <span class="spacer"></span>
+
+    <button class="navbar-button" mat-raised-button color="accent" routerLink="/login">
+      <mat-icon>login</mat-icon> Login
     </button>
+
   </mat-toolbar>
 </p>
