--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,12 +1,15 @@
 <p>
   <mat-toolbar color="primary">
-    <span>Virtual Banking APP</span>
+    <span routerLink="/">Virtual Banking APP</span>
     <span class="spacer"></span>
     <button class="navbar-button" mat-raised-button routerLink="/prog-functional">
       <mat-icon>face</mat-icon> Functional Programming
     </button>
     <span class="spacer"></span>
 
+    <button class="navbar-button" mat-raised-button color="accent" routerLink="/signup">
+      <mat-icon>user</mat-icon> Sign Up
+    </button>
     <button class="navbar-button" mat-raised-button color="accent" routerLink="/login">
       <mat-icon>login</mat-icon> Login
     </button>
