--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 60%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: black;
+  background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../src/assets/img/background02.png);
+
+}
+
+
 
 .container{
   margin-left: 100px;
@@ -15,5 +25,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .footer {
   position: fixed;
-  bottom: 0;
+  bottom: 5;
   }
