SignIn component updated
+ updated the component for login
+ added logic to control the login
+ some unused assets ( images )
+ more minor fixes

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,7 +1,10 @@
 .main-style{
   height: 100%;
   text-align: center;
+  margin-top: 10%;
+}
+
+.main-title{
   color: azure;
-  font-size: large;
-  margin-top: 25%;
+  font-size: 50px;
 }
