--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: black;
   background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(../src/assets/img/background02.png);
-
+  background-size: cover;
 }
 
 
