--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,3 @@
-<div class="main-style" *ngIf="isActive">
- <h1> Bienvenidos!</h1>
+<div class="main-style" >
+ <span class="main-title"> Bienvenidos! </span>
 </div>
