--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -2,15 +2,15 @@
   <mat-toolbar color="primary">
     <span routerLink="/">Virtual Banking APP</span>
     <span class="spacer"></span>
-    <button class="navbar-button" mat-raised-button routerLink="/prog-functional">
+ <!--   <button class="navbar-button" mat-raised-button routerLink="/prog-functional">
       <mat-icon>face</mat-icon> Functional Programming
-    </button>
+    </button>-->
     <span class="spacer"></span>
 
-    <button class="navbar-button" mat-raised-button color="accent" routerLink="/signup">
-      <mat-icon>user</mat-icon> Sign Up
+    <button class="navbar-button" mat-fab extended color="accent" routerLink="/signup">
+      <mat-icon>assignment_ind</mat-icon> Sign Up
     </button>
-    <button class="navbar-button" mat-raised-button color="accent" routerLink="/login">
+    <button class="navbar-button" mat-fab extended color="accent" routerLink="/login">
       <mat-icon>login</mat-icon> Login
     </button>
 
