--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,15 +1,9 @@
-<p>
-  <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
-</p>
+<div class="topnav">
+  <a class="active" href="#"[routerLink]="['/app-home']">Home</a>
+  <a href="#"[routerLink]="['/app-vista-lanzadera']">Mis datos</a>
+  <a href="#"[routerLink]="['/']">Mis Cuentas</a>
+  <a href="#"[routerLink]="['/']">Depositos</a>
+  <a href="#"[routerLink]="['/']">Transferencias</a>
+  <a href="#"[routerLink]="['/']">Buscar</a>
+  <a href="#"[routerLink]="['/app-ejercicio']">Funcional</a>
+</div>
