--- a/src/app/shared/toolbar/toolbar.component.scss
+++ b/src/app/shared/toolbar/toolbar.component.scss
@@ -1,3 +1,25 @@
-.example-spacer {
-  flex: 1 1 auto;
+.topnav {
+  background-color:  #212127;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.topnav a:hover {
+  background-color: #4f8dcaf2 ;
+  color: white;
+}
+
+.topnav a.active{
+  background-color:  #fe6047;
+  color: rgb(248, 250, 248);
+  font-weight: 500;
+  background:linear-gradient(to right, rgb(130,226,68), #6019e0);
 }
