--- a/src/app/customer/customer-info/customer-info.component.html
+++ b/src/app/customer/customer-info/customer-info.component.html
@@ -1,1 +1,18 @@
-<p>customer-info works!</p>
+<div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
+  <div class="flex flex-col rounded-t bg-white mb-0 p-5">
+    <h1><span class="text-4xl"> Customer Information </span></h1>
+
+    <ul class="mb-2 text-xl">
+      <li class="mb-3">Full Name: Rodrigo Caraballo</li>
+      <li class="mb-3">Document Type: Rodrigo Caraballo</li>
+      <li class="mb-3">Document: Rodrigo Caraballo</li>
+      <li class="mb-3">Email: Rodrigo Caraballo</li>
+      <li class="mb-3">Phone: Rodrigo Caraballo</li>
+    </ul>
+
+    <div class="flex justify-end p-2 gap-2">
+      <a href="http://localhost:4200/profile/change-password" class="rounded border px-4 py-1 bg-blue-600 text-white hover:bg-blue-500">Change Password</a>
+      <a href="http://localhost:4200/profile/edit-profile" class="rounded border px-4 py-1 bg-blue-600 text-white hover:bg-blue-500">Edit Profile</a>
+    </div>
+  </div>
+</div>
