--- a/src/app/login/sing-out/sing-out.component.html
+++ b/src/app/login/sing-out/sing-out.component.html
@@ -1,1 +1,10 @@
-<button>sign out</button>
+
+<div class="btn-group" role="group">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Perfil
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Ajustes</a></li>
+      <li><a class="dropdown-item" href="#">Sign Out</a></li>
+    </ul>
+</div>
