--- a/src/app/customer/modify-customer/modify-customer.component.html
+++ b/src/app/customer/modify-customer/modify-customer.component.html
@@ -1,1 +1,41 @@
-<p>modify-customer works!</p>
+<div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
+  <div class="flex flex-col rounded-t bg-white mb-0 p-5">
+    <h1 class="text-center">Edit Profile</h1>
+
+    <form action="">
+
+      <div class="flex flex-row mb-2">
+      <p class="text-xl w-1/4">Full Name: </p>
+      <input type="password" placeholder="·········" class="w-full border rounded-sm p-2 mb-2">
+    </div>
+
+    <div class="flex flex-row mb-2">
+      <p class="text-xl w-1/4">Document Type</p>
+      <select type="text" class="w-full border rounded-sm p-2 mb-2">
+        <option value="">National ID</option>
+        <option value="">Passport ID</option>
+      </select>
+    </div>
+
+    <div class="flex flex-row mb-2">
+      <p class="text-xl w-1/4">Document</p>
+      <input type="text" placeholder="12345678" class="w-full border rounded-sm p-2 mb-2">
+    </div>
+
+    <div class="flex flex-row mb-2">
+      <p class="text-xl w-1/4">Email</p>
+      <input type="email" placeholder="example@ex.com" class="w-full border rounded-sm p-2 mb-2">
+    </div>
+
+    <div class="flex flex-row mb-2">
+      <p class="text-xl w-1/4">Phone</p>
+      <input type="tel" placeholder="091001122" class="w-full border rounded-sm p-2 mb-2">
+    </div>
+
+    <div class="flex justify-end mt-2">
+      <button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">Confirm</button>
+    </div>
+
+  </form>
+  </div>
+</div>
