History of Deposit
Component to show history of deposit

--- a/src/app/deposit/deposit-history/deposit-history.component.html
+++ b/src/app/deposit/deposit-history/deposit-history.component.html
@@ -1,1 +1,21 @@
-<p>deposit-history works!</p>
+<div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
+  <div class="flex flex-col rounded-t bg-white mb-0 p-5">
+    <h1>Deposits List</h1>
+
+      <table class="mb-5">
+        <tr>
+          <th>Amount</th>
+          <th>Date</th>
+          <th>Reason</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+
+    <div>
+      <app-pagination></app-pagination>
+    </div>
+  </div>
+</div>
