Info of deposit
Toolbar to deposit section

--- a/src/app/deposit/deposit-info/deposit-info.component.html
+++ b/src/app/deposit/deposit-info/deposit-info.component.html
@@ -1,1 +1,12 @@
-<p>deposit-info works!</p>
+<div class="relative p-4 shadow-lg rounded-lg bg-blueGray-100 border-0 w-9/12 mx-auto mt-4">
+  <div class="flex flex-col rounded-t bg-white mb-0 p-4">
+    <div class="flex justify-between">
+      <select name="" id="" class="px-4 py-2 shadow rounded-sm">
+        <option value="" class="text-2xl rounded-sm ">Cuenta 1</option>
+      </select>
+
+      <a href="http://localhost:4200/deposit/new-deposit" class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">New Deposit</a>
+    </div>
+  </div>
+</div>
+
