--- a/src/app/account/create-account-type/createaccounttype.component.html
+++ b/src/app/account/create-account-type/createaccounttype.component.html
@@ -1,3 +1,20 @@
-<pre>
-  app-createaccounttype
-</pre>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+      <form>
+        <div class="form-group">
+          <label for="accountType">Tipo de Cuenta</label>
+          <select class="form-control" formControlName="documentType" id="accountType">
+            <option>Cuenta Pesos </option>
+            <option>Cuenta Dolares</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="name">Nombre para su cuenta :</label>
+          <input type="text" class="form-control" id="name" name="name">
+        </div>
+        <button type="submit" class="btn btn-primary">Validar</button>
+      </form>
+    </div>
+  </div>
+</div>
