This an extra commit
Only to clear the project and some extra modifies

--- a/src/app/login/sign-out/sign-out.component.html
+++ b/src/app/login/sign-out/sign-out.component.html
@@ -1,1 +1,1 @@
-<p>sign-out works!</p>
+<button class="bg-blue-600 text-white p-2 rounded border border-gray-300 mr-4 hover:bg-blue-400">Sign Out</button>
