--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,15 +1,28 @@
-<p>
-  <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
-</p>
+<!-- component -->
+<nav id="header" class="w-full z-30 top-10 py-1 bg-white shadow-lg border-b border-blue-400 mt-24">
+  <div class="w-full flex items-center justify-between mt-0 px-6 py-2">
+     <div class="md:flex md:items-center md:w-auto" id="menu" *ngIf="isLogged">
+        <nav>
+           <ul class="md:flex items-center justify-between md:al text-base text-blue-600 pt-4 md:pt-0">
+              <li><a class="inline-block no-underline hover:text-black font-medium text-lg py-2 px-4 lg:-ml-2" href="http://localhost:4200/dashboard">Home</a></li>
+              <li><a class="inline-block no-underline hover:text-black font-medium text-lg py-2 px-4 lg:-ml-2" href="http://localhost:4200/profile">Profile</a></li>
+              <li><a class="inline-block no-underline hover:text-black font-medium text-lg py-2 px-4 lg:-ml-2" href="http://localhost:4200/deposit/history">Deposit</a></li>
+              <li><a class="inline-block no-underline hover:text-black font-medium text-lg py-2 px-4 lg:-ml-2" href="http://localhost:4200/transfer/history">Transfer</a></li>
+           </ul>
+        </nav>
+     </div>
+
+     <div class="flex flex-wrap items-center justify-end mr-0 md:mr-4" id="nav-content" *ngIf="!isLogged">
+        <div class="auth flex items-center w-full md:w-full">
+           <button class="bg-transparent text-gray-800  p-2 rounded border border-gray-300 mr-4 hover:bg-gray-100 hover:text-gray-700">Sign in</button>
+           <button class="bg-blue-600 text-gray-200  p-2 rounded  hover:bg-blue-500 hover:text-gray-100">Sign up</button>
+        </div>
+     </div>
+
+     <div class="flex flex-wrap mr-0 md:mr-4" id="nav-content" *ngIf="isLogged">
+      <div class="auth w-full md:w-full">
+         <app-sign-out></app-sign-out>
+      </div>
+   </div>
+  </div>
+</nav>
