Desktop Module Updated & Guards
+ Desktop area added/updated/created
+ some unused files removed
+ update to routing

+ Guards files added ( not functional yet )

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     <span class="spacer"></span>
  <!--   <button class="navbar-button" mat-raised-button routerLink="/prog-functional">
       <mat-icon>face</mat-icon> Functional Programming
-    </button>-->
-    <span class="spacer"></span>
+    </button>
+    <span class="spacer"></span>-->
 
     <button class="navbar-button" mat-fab extended color="accent" routerLink="/signup">
       <mat-icon>assignment_ind</mat-icon> Sign Up
